input-sys/src/gen.rs

extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the current absolute x coordinate of the tablet tool event,
 * transformed to screen coordinates.
 *
 * @note This function may be called for a specific axis even if
 * libinput_event_tablet_tool_*_has_changed() returns 0 for that axis.
 * libinput always includes all device axes in the event.
 *
 * @note On some devices, returned value may be negative or larger than the
 * width of the device. See @ref tablet-bounds for more details.
 *
 * @param event The libinput tablet tool event
 * @param width The current output screen width
 * @return the current absolute x coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_tablet_tool_get_x_transformed(event:
                                                            *mut libinput_event_tablet_tool,
                                                        width: u32) -> f64;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the current absolute y coordinate of the tablet tool event,
 * transformed to screen coordinates.
 *
 * @note This function may be called for a specific axis even if
 * libinput_event_tablet_tool_*_has_changed() returns 0 for that axis.
 * libinput always includes all device axes in the event.
 *
 * @note On some devices, returned value may be negative or larger than the
 * width of the device. See @ref tablet-bounds for more details.
 *
 * @param event The libinput tablet tool event
 * @param height The current output screen height
 * @return the current absolute y coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_tablet_tool_get_y_transformed(event:
                                                            *mut libinput_event_tablet_tool,
                                                        height: u32) -> f64;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Returns the tool that was in use during this event.
 *
 * The returned tablet tool is not refcounted and may become invalid after
 * the next call to libinput. Use libinput_tablet_tool_ref() and
 * libinput_tablet_tool_unref() to continue using the handle outside of the
 * immediate scope.
 *
 * If the caller holds at least one reference, this struct is used
 * whenever the tools enters proximity again.
  *
 * @note Physical tool tracking requires hardware support. If unavailable,
 * libinput creates one tool per type per tablet. See @ref
 * tablet-serial-numbers for more details.
 *
 * @param event The libinput tablet tool event
 * @return The new tool triggering this event
 */
    pub fn libinput_event_tablet_tool_get_tool(event:
                                                   *mut libinput_event_tablet_tool)
     -> *mut libinput_tablet_tool;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Returns the new proximity state of a tool from a proximity event.
 * Used to check whether or not a tool came in or out of proximity during an
 * event of type @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY.
 *
 * See @ref tablet-fake-proximity for recommendations on proximity handling.
 *
 * @param event The libinput tablet tool event
 * @return The new proximity state of the tool from the event.
 */
    pub fn libinput_event_tablet_tool_get_proximity_state(event:
                                                              *mut libinput_event_tablet_tool)
     -> libinput_tablet_tool_proximity_state;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Returns the new tip state of a tool from a tip event.
 * Used to check whether or not a tool came in contact with the tablet
 * surface or left contact with the tablet surface during an
 * event of type @ref LIBINPUT_EVENT_TABLET_TOOL_TIP.
 *
 * @param event The libinput tablet tool event
 * @return The new tip state of the tool from the event.
 */
    pub fn libinput_event_tablet_tool_get_tip_state(event:
                                                        *mut libinput_event_tablet_tool)
     -> libinput_tablet_tool_tip_state;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the button that triggered this event.  For events that are not of
 * type @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON.
 *
 * @param event The libinput tablet tool event
 * @return the button triggering this event
 */
    pub fn libinput_event_tablet_tool_get_button(event:
                                                     *mut libinput_event_tablet_tool)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the button state of the event.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON.
 *
 * @param event The libinput tablet tool event
 * @return the button state triggering this event
 */
    pub fn libinput_event_tablet_tool_get_button_state(event:
                                                           *mut libinput_event_tablet_tool)
     -> libinput_button_state;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * For the button of a @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON event, return the total
 * number of buttons pressed on all devices on the associated seat after the
 * the event was triggered.
 *
 " @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON. For other events, this function returns 0.
 *
 * @param event The libinput tablet tool event
 * @return the seat wide pressed button count for the key of this event
 */
    pub fn libinput_event_tablet_tool_get_seat_button_count(event:
                                                                *mut libinput_event_tablet_tool)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * @param event The libinput tablet tool event
 * @return The event time for this event
 */
    pub fn libinput_event_tablet_tool_get_time(event:
                                                   *mut libinput_event_tablet_tool)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * @param event The libinput tablet tool event
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_tablet_tool_get_time_usec(event:
                                                        *mut libinput_event_tablet_tool)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the tool type for a tool object, see @ref
 * tablet-tool-types for details.
 *
 * @param tool The libinput tool
 * @return The tool type for this tool object
 *
 * @see libinput_tablet_tool_get_tool_id
 */
    pub fn libinput_tablet_tool_get_type(tool: *mut libinput_tablet_tool)
     -> libinput_tablet_tool_type;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the tool ID for a tool object. If nonzero, this number identifies
 * the specific type of the tool with more precision than the type returned in
 * libinput_tablet_tool_get_type(), see @ref tablet-tool-types. Not all
 * tablets support a tool ID.
 *
 * Tablets known to support tool IDs include the Wacom Intuos 3, 4, 5, Wacom
 * Cintiq and Wacom Intuos Pro series.
 *
 * @param tool The libinput tool
 * @return The tool ID for this tool object or 0 if none is provided
 *
 * @see libinput_tablet_tool_get_type
 */
    pub fn libinput_tablet_tool_get_tool_id(tool: *mut libinput_tablet_tool)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Increment the reference count of the tool by one. A tool is destroyed
 * whenever the reference count reaches 0. See libinput_tablet_tool_unref().
 *
 * @param tool The tool to increment the ref count of
 * @return The passed tool
 *
 * @see libinput_tablet_tool_unref
 */
    pub fn libinput_tablet_tool_ref(tool: *mut libinput_tablet_tool)
     -> *mut libinput_tablet_tool;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Decrement the reference count of the tool by one. When the reference
 * count of the tool reaches 0, the memory allocated for the tool will be
 * freed.
 *
 * @param tool The tool to decrement the ref count of
 * @return NULL if the tool was destroyed otherwise the passed tool
 *
 * @see libinput_tablet_tool_ref
 */
    pub fn libinput_tablet_tool_unref(tool: *mut libinput_tablet_tool)
     -> *mut libinput_tablet_tool;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool supports pressure.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_pressure(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool supports distance.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_distance(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool supports tilt.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_tilt(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool supports z-rotation.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_rotation(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool has a slider axis.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_slider(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return whether the tablet tool has a relative wheel.
 *
 * @param tool The tool to check the axis capabilities of
 * @return Nonzero if the axis is available, zero otherwise.
 */
    pub fn libinput_tablet_tool_has_wheel(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Check if a tablet tool has a button with the
 * passed-in code (see linux/input.h).
 *
 * @param tool A tablet tool
 * @param code button code to check for
 *
 * @return 1 if the tool supports this button code, 0 if it does not
 */
    pub fn libinput_tablet_tool_has_button(tool: *mut libinput_tablet_tool,
                                           code: u32) -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return nonzero if the physical tool can be uniquely identified by
 * libinput, or nonzero otherwise. If a tool can be uniquely identified,
 * keeping a reference to the tool allows tracking the tool across
 * proximity out sequences and across compatible tablets.
 * See @ref tablet-serial-numbers for more details.
 *
 * @param tool A tablet tool
 * @return 1 if the tool can be uniquely identified, 0 otherwise.
 *
 * @see libinput_tablet_tool_get_serial
 */
    pub fn libinput_tablet_tool_is_unique(tool: *mut libinput_tablet_tool)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the serial number of a tool. If the tool does not report a serial
 * number, this function returns zero. See @ref tablet-serial-numbers for
 * details.
 *
 * @param tool The libinput tool
 * @return The tool serial number
 *
 * @see libinput_tablet_tool_is_unique
 */
    pub fn libinput_tablet_tool_get_serial(tool: *mut libinput_tablet_tool)
     -> u64;
}
